added support for parallel execution

--- a/src/main/java/com/automation/config/config.properties
+++ b/src/main/java/com/automation/config/config.properties
@@ -6,3 +6,4 @@ password=Y)CKdt7jWg24a.q8
 comment=sample comment test
 SubscribedSubredditsName=Home
 SubscribedSubredditURL=https://www.reddit.com/subreddits
+browser=Chrome
